--- a/Audiosurf2_Tools/Controls/MoreFoldersControl.axaml
+++ b/Audiosurf2_Tools/Controls/MoreFoldersControl.axaml
@@ -22,15 +22,36 @@
                 <ItemsControl Background="#aa222222"
                               CornerRadius="3"
                               Items="{Binding MoreFolders}">
+                    <ItemsControl.Styles>
+                        <Style Selector="miniControls|MoreFoldersItemControl">
+                            <Style.Animations>
+                                <Animation Duration="0:0:0.25"
+                                           FillMode="Forward">
+                                    <KeyFrame Cue="0%">
+                                        <Setter Property="Opacity" Value="0"/>
+                                        <Setter Property="ScaleTransform.ScaleX" Value="0" />
+                                        <Setter Property="ScaleTransform.ScaleY" Value="0" />
+                                    </KeyFrame>
+                                    <KeyFrame Cue="20%">
+                                        <Setter Property="Opacity" Value="0"/>
+                                    </KeyFrame>
+                                    <KeyFrame Cue="100%">
+                                        <Setter Property="Opacity" Value="1"/>
+                                        <Setter Property="ScaleTransform.ScaleX" Value="1" />
+                                        <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                                    </KeyFrame>
+                                </Animation>
+                            </Style.Animations>
+                        </Style>
+                    </ItemsControl.Styles>
+                    
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <StackPanel Orientation="Vertical">
                                 <miniControls:MoreFoldersItemControl BorderBrush="#222222"
                                                                      BorderThickness="1" 
                                                                      CornerRadius="3"
                                                                      Padding="2.5"
                                                                      DataContext="{Binding Mode=TwoWay}" />
-                            </StackPanel>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
