--- a/Audiosurf2_Tools/Controls/PlaylistEditorControl.axaml
+++ b/Audiosurf2_Tools/Controls/PlaylistEditorControl.axaml
@@ -96,12 +96,34 @@
                      Items="{Binding  PlaylistItems}">
                 <ListBox.Styles>
                     <Style Selector="ListBoxItem">
-                        <Setter Property="Padding" Value="2.5"/> 
+                        <Setter Property="Padding" Value="2.5"/>
+                    </Style>
+                    <Style Selector="ListBoxItem:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+                        <Setter Property="Background" Value="Transparent"/>
+                    </Style>
+                    <Style Selector="miniControls|PlaylistItemControl">
+                        <Style.Animations>
+                            <Animation Duration="0:0:0.35" FillMode="Forward">
+                                <KeyFrame Cue="0%">
+                                    <Setter Property="Opacity" Value="0"/>
+                                    <Setter Property="ScaleTransform.ScaleX" Value="0" />
+                                    <Setter Property="ScaleTransform.ScaleY" Value="0" />
+                                </KeyFrame>
+                                <KeyFrame Cue="20%">
+                                    <Setter Property="Opacity" Value="0"/>
+                                </KeyFrame>
+                                <KeyFrame Cue="100%">
+                                    <Setter Property="Opacity" Value="1"/>
+                                    <Setter Property="ScaleTransform.ScaleX" Value="1" />
+                                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                                </KeyFrame>
+                            </Animation>
+                        </Style.Animations>
                     </Style>
                 </ListBox.Styles>
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <miniControls:PlaylistItemControl DataContext="{Binding}" />
+                        <miniControls:PlaylistItemControl PlaylistItem="{Binding }"/>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
