--- a/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
+++ b/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
@@ -13,13 +13,13 @@
         <viewModels:TwitchBotViewModel />
     </UserControl.DataContext>
 
-    <Grid ColumnDefinitions="*,1.75*"
+    <Grid ColumnDefinitions="*, 5, 1.75*, Auto"
           RowDefinitions="Auto,Auto,Auto,Auto,*"
           HorizontalAlignment="Stretch"
           VerticalAlignment="Stretch">
 
         <GroupBox Grid.Column="0"
-                  Grid.ColumnSpan="2"
+                  Grid.ColumnSpan="4"
                   Grid.Row="0"
                   Margin="0,0,0,2.5"
                   Header="Controls"
@@ -103,47 +103,47 @@
         </GroupBox>
 
         <Separator Grid.Column="0"
-                   Grid.ColumnSpan="2"
+                   Grid.ColumnSpan="4"
                    Grid.Row="1"
                    Margin="10,0"
                    HorizontalAlignment="Stretch"
                    VerticalAlignment="Center"
                    BorderThickness="1"
                    BorderBrush="White" />
-        
+
         <StackPanel Grid.Column="0"
-                    Grid.ColumnSpan="2"
+                    Grid.ColumnSpan="4"
                     Grid.Row="2"
                     Orientation="Horizontal"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Spacing="5">
             <TextBlock Text="Queue Duration:"
-                       VerticalAlignment="Center"/>
+                       VerticalAlignment="Center" />
             <TextBlock Text="{Binding RequestsLength}"
-                       VerticalAlignment="Center"/>
+                       VerticalAlignment="Center" />
             <Separator Margin="0,5"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Stretch"
                        BorderThickness="1"
                        BorderBrush="White" />
             <TextBlock Text="Requests Enabled:"
-                       VerticalAlignment="Center"/>
-            <ToggleSwitch IsChecked="{Binding RequestsOpen}"/>
+                       VerticalAlignment="Center" />
+            <ToggleSwitch IsChecked="{Binding RequestsOpen}" />
         </StackPanel>
-        
+
         <Separator Grid.Column="0"
-                   Grid.ColumnSpan="2"
+                   Grid.ColumnSpan="4"
                    Grid.Row="3"
                    Margin="10,0"
                    HorizontalAlignment="Stretch"
                    VerticalAlignment="Center"
                    BorderThickness="1"
                    BorderBrush="White" />
-        
+
         <GroupBox Grid.Column="0"
                   Grid.Row="4"
-                  Margin="0,2.5,1.5,0"
+                  Margin="0,2.5,0,0"
                   Header="Chat"
                   BorderThickness="1"
                   CornerRadius="3">
@@ -164,29 +164,125 @@
 
         </GroupBox>
 
-        <GroupBox Grid.Column="1"
+        <GridSplitter Grid.Column="1"
+                      Grid.Row="4"
+                      Margin="3"
+                      CornerRadius="3"
+                      VerticalAlignment="Stretch"
+                      HorizontalAlignment="Left"
+                      ResizeBehavior="PreviousAndNext"
+                      ResizeDirection="Columns"
+                      Background="White" />
+
+        <GroupBox Grid.Column="2"
+                  Grid.ColumnSpan="2"
                   Grid.Row="4"
                   Margin="0,2.5,0,0"
                   Header="Requests"
                   BorderThickness="1"
                   CornerRadius="3">
-            <ListBox Background="#AA222222"
-                     HorizontalAlignment="Stretch"
-                     VerticalAlignment="Stretch"
-                     CornerRadius="3"
-                     SelectedIndex="{Binding RequestSelectionDummy}"
-                     DoubleTapped="InputElement_OnDoubleTapped"
-                     Items="{Binding Requests}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate DataType="models:TwitchRequestItem">
-                        <miniControls:RequestItemControl DataContext="{Binding}"/>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+
+            <Grid HorizontalAlignment="Stretch"
+                  VerticalAlignment="Stretch">
+                <ListBox Background="#AA222222"
+                         CornerRadius="3"
+                         SelectedIndex="{Binding RequestSelectionDummy}"
+                         Items="{Binding Requests}">
+                    <ListBox.Styles>
+                        <Style Selector="ListBoxItem:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+                            <Setter Property="Background" Value="Transparent" />
+                        </Style>
+                        <Style Selector="ListBoxItem">
+                            <Setter Property="Padding" Value="2.5" />
+                            <Style.Animations>
+                                <Animation Duration="0:0:0.35" 
+                                           FillMode="Forward">
+                                    <KeyFrame Cue="0%">
+                                        <Setter Property="Opacity" Value="0" />
+                                        <Setter Property="ScaleTransform.ScaleX" Value="0" />
+                                        <Setter Property="ScaleTransform.ScaleY" Value="0" />
+                                    </KeyFrame>
+                                    <KeyFrame Cue="20%">
+                                        <Setter Property="Opacity" Value="0" />
+                                    </KeyFrame>
+                                    <KeyFrame Cue="100%">
+                                        <Setter Property="Opacity" Value="1" />
+                                        <Setter Property="ScaleTransform.ScaleX" Value="1" />
+                                        <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                                    </KeyFrame>
+                                </Animation>
+                            </Style.Animations>
+                        </Style>
+                    </ListBox.Styles>
+                    <ListBox.ItemTemplate>
+                        <DataTemplate DataType="models:TwitchRequestItem">
+                            <miniControls:RequestItemControl DataContext="{Binding}" />
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+
+                <Button HorizontalAlignment="Right"
+                        HorizontalContentAlignment="Stretch"
+                        VerticalAlignment="Top"
+                        VerticalContentAlignment="Center"
+                        Command="{Binding OpenPopOut}">
+
+                    <Button.Styles>
+                        <Style Selector="Button TextBlock">
+                            <Setter Property="MaxWidth"
+                                    Value="0"/>
+                            <Setter Property="Opacity"
+                                    Value="0"/>
+                        </Style>
+                        <Style Selector="Button:pointerover TextBlock">
+                            <Style.Animations>
+                                <Animation Duration="0:0:0.5" 
+                                           FillMode="Forward" 
+                                           Easing="BackEaseIn">
+                                    <KeyFrame Cue="0%">
+                                        <Setter Property="MaxWidth"
+                                                Value="0"/>
+                                        <Setter Property="Opacity"
+                                                Value="0"/>
+                                    </KeyFrame>
+                                    <KeyFrame Cue="20%">
+                                        <Setter Property="Opacity"
+                                                Value="0"/>
+                                    </KeyFrame>
+                                    <KeyFrame Cue="100%">
+                                        <Setter Property="MaxWidth"
+                                                Value="100"/>
+                                        <Setter Property="Opacity"
+                                                Value="1"/>
+                                    </KeyFrame>
+                                </Animation>
+                            </Style.Animations>
+                        </Style>
+                    </Button.Styles>
+
+                    <Button.Content>
+                        <Grid ColumnDefinitions="Auto, Auto"
+                              HorizontalAlignment="Left"
+                              VerticalAlignment="Center">
+
+                            <TextBlock Grid.Column="0"
+                                       VerticalAlignment="Center"
+                                       Padding="5,0,10,0"
+                                       Text="Open PopUp" />
+
+                            <Image Grid.Column="1"
+                                   VerticalAlignment="Center"
+                                   Source="avares://Audiosurf2_Tools/Assets/openext.png"
+                                   Height="20"
+                                   Width="20" />
+                        </Grid>
+                    </Button.Content>
+                </Button>
+            </Grid>
         </GroupBox>
 
         <controls:TwitchBotSetupControl Grid.Column="0"
-                                        Grid.ColumnSpan="2"
+                                        Grid.ColumnSpan="4"
                                         Grid.Row="0"
                                         Grid.RowSpan="5"
                                         HorizontalAlignment="Stretch"
