--- a/Audiosurf2_Tools/Controls/TwitchPopOutControl.axaml
+++ b/Audiosurf2_Tools/Controls/TwitchPopOutControl.axaml
@@ -49,6 +49,30 @@
 
             <ItemsControl CornerRadius="3"
                           Items="{Binding ParentCollection, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type UserControl}}}">
+                
+                <ItemsControl.Styles>
+                    <Style Selector="miniControls|PopOutRequestItemControl">
+                        <Style.Animations>
+                            <Animation Duration="0:0:0.25"
+                                       FillMode="Forward">
+                                <KeyFrame Cue="0%">
+                                    <Setter Property="Opacity" Value="0"/>
+                                    <Setter Property="ScaleTransform.ScaleX" Value="0" />
+                                    <Setter Property="ScaleTransform.ScaleY" Value="0" />
+                                </KeyFrame>
+                                <KeyFrame Cue="20%">
+                                    <Setter Property="Opacity" Value="0"/>
+                                </KeyFrame>
+                                <KeyFrame Cue="100%">
+                                    <Setter Property="Opacity" Value="1"/>
+                                    <Setter Property="ScaleTransform.ScaleX" Value="1" />
+                                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                                </KeyFrame>
+                            </Animation>
+                        </Style.Animations>
+                    </Style>
+                </ItemsControl.Styles>
+                
                 <ItemsControl.ItemTemplate>
                     <DataTemplate DataType="models:TwitchRequestItem">
                         <miniControls:PopOutRequestItemControl RequestItem="{Binding Mode=TwoWay}"
