--- a/Audiosurf2_Tools/Views/MainWindow.axaml
+++ b/Audiosurf2_Tools/Views/MainWindow.axaml
@@ -50,7 +50,8 @@
                     <Button HorizontalAlignment="Stretch"
                             CornerRadius="0"
                             Background="{Binding InstallerHighlight}"
-                            Command="{Binding OpenInstaller}">
+                            Command="{Binding SwitchPage}"
+                            CommandParameter="0">
                         <StackPanel Orientation="Horizontal"
                                     Spacing="10">
                             <Image Source="avares://Audiosurf2_Tools/Assets/install.png"
@@ -63,7 +64,8 @@
                     <Button HorizontalAlignment="Stretch"
                             CornerRadius="0"
                             Background="{Binding MoreFoldersHighlight}"
-                            Command="{Binding OpenMoreFolders}">
+                            Command="{Binding SwitchPage}"
+                            CommandParameter="1">
                         <StackPanel Orientation="Horizontal"
                                     Spacing="10">
                             <Image Source="avares://Audiosurf2_Tools/Assets/folders.png"
@@ -76,7 +78,8 @@
                     <Button HorizontalAlignment="Stretch"
                             CornerRadius="0"
                             Background="{Binding PlaylistEditorHighlight}"
-                            Command="{Binding OpenPlaylistEditor}">
+                            Command="{Binding SwitchPage}"
+                            CommandParameter="2">
                         <StackPanel Orientation="Horizontal"
                                     Spacing="10">
                             <Image Source="avares://Audiosurf2_Tools/Assets/playlist.png"
@@ -88,7 +91,8 @@
 
                     <Button HorizontalAlignment="Stretch"
                             Background="{Binding TwitchBotHighlight}"
-                            Command="{Binding OpenTwitchBot}">
+                            Command="{Binding SwitchPage}"
+                            CommandParameter="3">
                         <StackPanel Orientation="Horizontal"
                                     Spacing="10">
                             <Image Source="avares://Audiosurf2_Tools/Assets/twitch.png"
@@ -100,7 +104,8 @@
 
                     <Button HorizontalAlignment="Stretch"
                             Background="{Binding SettingsHighlight}"
-                            Command="{Binding  OpenSettings}">
+                            Command="{Binding SwitchPage}"
+                            CommandParameter="4">
                         <StackPanel Orientation="Horizontal"
                                     Spacing="10">
                             <Image Source="avares://Audiosurf2_Tools/Assets/settings.png"
@@ -126,7 +131,55 @@
                                    Height="1" />
                     </StackPanel>
                     
-                    <controls:InstallerControl Grid.Row="1"
+                    <UserControl Grid.Row="1"
+                                 VerticalAlignment="Stretch"
+                                 HorizontalAlignment="Stretch"
+                                 Content="{Binding ActiveControl}">
+                        <UserControl.Styles>
+                            <Style Selector="controls|InstallerControl, controls|PlaylistEditorControl, controls|TwitchBotControl, controls|SettingsControl">
+                                <Style.Animations>
+                                    <Animation Duration="0:0:0.25"
+                                               FillMode="Forward">
+                                        <KeyFrame Cue="0%">
+                                            <Setter Property="Opacity" Value="0"/>
+                                            <Setter Property="ScaleTransform.ScaleX" Value="0" />
+                                            <Setter Property="ScaleTransform.ScaleY" Value="0" />
+                                        </KeyFrame>
+                                        <KeyFrame Cue="20%">
+                                            <Setter Property="Opacity" Value="0"/>
+                                        </KeyFrame>
+                                        <KeyFrame Cue="100%">
+                                            <Setter Property="Opacity" Value="1"/>
+                                            <Setter Property="ScaleTransform.ScaleX" Value="1" />
+                                            <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                                        </KeyFrame>
+                                    </Animation>
+                                </Style.Animations>
+                            </Style>
+                            <Style Selector="controls|MoreFoldersControl">
+                                <Style.Animations>
+                                    <Animation Duration="0:0:0.25"
+                                               FillMode="Forward">
+                                        <KeyFrame Cue="0%">
+                                            <Setter Property="Opacity" Value="0"/>
+                                            <Setter Property="ScaleTransform.ScaleX" Value="0" />
+                                            <Setter Property="ScaleTransform.ScaleY" Value="0" />
+                                        </KeyFrame>
+                                        <KeyFrame Cue="20%">
+                                            <Setter Property="Opacity" Value="0"/>
+                                        </KeyFrame>
+                                        <KeyFrame Cue="100%">
+                                            <Setter Property="Opacity" Value="1"/>
+                                            <Setter Property="ScaleTransform.ScaleX" Value="1" />
+                                            <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                                        </KeyFrame>
+                                    </Animation>
+                                </Style.Animations>
+                            </Style>
+                        </UserControl.Styles>
+                    </UserControl>
+                    
+                    <!--<controls:InstallerControl Grid.Row="1"
                                                DataContext="{Binding InstallerViewModel}"
                                                IsVisible="{Binding IsOpen}"
                                                IsEnabled="{Binding IsOpen}"/>
@@ -149,7 +202,7 @@
                     <controls:SettingsControl Grid.Row="1"
                                               DataContext="{Binding SettingsViewModel}"
                                               IsVisible="{Binding IsOpen}"
-                                              IsEnabled="{Binding IsOpen}"/>
+                                              IsEnabled="{Binding IsOpen}"/>-->
 
                 </Grid>
 
