--- a/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
+++ b/Audiosurf2_Tools/Controls/TwitchBotControl.axaml
@@ -153,6 +153,30 @@
                           HorizontalAlignment="Stretch"
                           VerticalAlignment="Stretch"
                           Items="{Binding ChatMessages}">
+                
+                <ItemsControl.Styles>
+                    <Style Selector="TextBlock">
+                        <Style.Animations>
+                            <Animation Duration="0:0:0.35" 
+                                       FillMode="Forward">
+                                <KeyFrame Cue="0%">
+                                    <Setter Property="Opacity" Value="0" />
+                                    <Setter Property="ScaleTransform.ScaleX" Value="0" />
+                                    <Setter Property="ScaleTransform.ScaleY" Value="0" />
+                                </KeyFrame>
+                                <KeyFrame Cue="20%">
+                                    <Setter Property="Opacity" Value="0" />
+                                </KeyFrame>
+                                <KeyFrame Cue="100%">
+                                    <Setter Property="Opacity" Value="1" />
+                                    <Setter Property="ScaleTransform.ScaleX" Value="1" />
+                                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                                </KeyFrame>
+                            </Animation>
+                        </Style.Animations>
+                    </Style>
+                </ItemsControl.Styles>
+                
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Margin="2.5, 5"
